--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                     <i class="fas fa-volume-mute"></i>
                 </button>
                 <select name="kick-select" id="kick-select">
-                    <option value=".sounds/kick-classic.wav">Classic Kick</option>
-                    <option value=".sounds/kick-808.wav">808 Kick</option>
-                    <option value=".sounds/kick-heavy.wav">Kick Heavy</option>
+                    <option value="sounds/kick-classic.wav">Classic Kick</option>
+                    <option value="sounds/kick-808.wav">808 Kick</option>
+                    <option value="sounds/kick-heavy.wav">Kick Heavy</option>
                 </select>
             </div>
             <div class="kick">
@@ -40,9 +40,9 @@
                     <i class="fas fa-volume-mute"></i>
                 </button>
                 <select name="snare-select" id="snare-select">
-                    <option value=".sounds/snare-acoustic01.wav">Classic Snare</option>
-                    <option value=".sounds/snare-808.wav">808 Snare</option>
-                    <option value=".sounds/snare-vinyl02.wav">Snare vinyl</option>
+                    <option value="sounds/snare-acoustic01.wav">Classic Snare</option>
+                    <option value="sounds/snare-808.wav">808 Snare</option>
+                    <option value="sounds/snare-vinyl02.wav">Snare vinyl</option>
                 </select>
             </div>
             <div class="snare">
@@ -64,8 +64,8 @@
                     <i class="fas fa-volume-mute"></i>
                 </button>
                 <select name="hihat-select" id="hihat-select">
-                    <option value=".sounds/hihat-acoustic01.wav">Hihat acoustic</option>
-                    <option value=".sounds/hihat-808.wav">808 Hihat</option>
+                    <option value="sounds/hihat-acoustic01.wav">Hihat acoustic</option>
+                    <option value="sounds/hihat-808.wav">808 Hihat</option>
                 </select>
             </div>
             <div class="hihat">
@@ -80,6 +80,16 @@
             </div>
         </div>
         <button class="play">Play</button>
+        <div class="tempo">
+            <input 
+            type="range"
+            class="tempo-slider" 
+            max="300"
+            min="20" 
+            value="150"
+            />
+            <p>Tempo : <span class="tempo-nr"> 150 </span></p>
+        </div>
     </div>
     <audio  class="kick-sound" src="./sounds/kick-classic.wav"></audio>
     <audio  class="snare-sound" src="./sounds/snare-acoustic01.wav"></audio>
